changed json parsing from gson to jackson